Deploy raw filesystem diagnostic dump script in KernelSuPlugin